[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/egoventure/nodes/four_side_room.tscn" type="PackedScene" id=1]
[ext_resource path="res://images/man/man03d.jpg" type="Texture2D" id=2]
[ext_resource path="res://images/man/man03b.jpg" type="Texture2D" id=3]
[ext_resource path="res://images/man/man03c.jpg" type="Texture2D" id=4]
[ext_resource path="res://images/man/man03a.jpg" type="Texture2D" id=5]
[ext_resource path="res://addons/egoventure/nodes/hotspots/hotspot.gd" type="Script" id=6]
[ext_resource path="res://scenes/man/man03.gd" type="Script" id=7]

[node name="Node2D" type="Node2D"]
script = ExtResource( 7 )

[node name="Node3D" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 3.77563 )
front_texture = ExtResource( 5 )
right_texture = ExtResource( 3 )
back_texture = ExtResource( 4 )
left_texture = ExtResource( 2 )

[node name="Hotspot" type="TextureButton" parent="."]
offset_left = 3317.91
offset_top = 635.668
offset_right = 4419.91
offset_bottom = 1388.67
mouse_default_cursor_shape = 16
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
cursor_type = 8
target_scene = "res://scenes/man/man03b_cl.tscn"

[node name="Hotspot2" type="TextureButton" parent="."]
offset_left = 977.195
offset_top = -820.011
offset_right = 1701.19
offset_bottom = -103.011
mouse_default_cursor_shape = 3
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hotspot3" type="TextureButton" parent="."]
offset_left = 955.509
offset_top = 1953.24
offset_right = 1694.51
offset_bottom = 2670.24
mouse_default_cursor_shape = 3
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
target_scene = "res://scenes/man/man02.tscn"
target_view = "back"

[node name="eye_info_hs" type="TextureButton" parent="."]
offset_left = 2102.0
offset_top = -1450.24
offset_right = 2573.0
offset_bottom = 26.7622
mouse_default_cursor_shape = 15
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
cursor_type = 3
target_scene = "res://scenes/man/man03b_inf.tscn"

[node name="eye_info_hs2" type="TextureButton" parent="."]
offset_left = -11.7755
offset_top = 1430.22
offset_right = 451.224
offset_bottom = 2901.22
mouse_default_cursor_shape = 14
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
cursor_type = 4
target_scene = "res://scenes/man/man03b_inf.tscn"

[connection signal="pressed" from="Hotspot2" to="." method="_on_Hotspot2_pressed"]
